fixed the date icon alignment and manadatory check on scheduler end date

--- a/src/main/webapp/content/scss/partials/_scheduler.scss
+++ b/src/main/webapp/content/scss/partials/_scheduler.scss
@@ -23,3 +23,7 @@
 .cancel-job-icon{
 	color:#ED5565;
 }
+
+.scheduler-date-icon{
+	vertical-align: bottom;
+}
